--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "orangehill/iseed": "^2.6",
         "reliese/laravel": "^0.0.16",
         "tymon/jwt-auth": "^1.0",
         "woocommerce/woocommerce": "^4.5"
